--- a/appCEP/appCEP/Menu.xaml
+++ b/appCEP/appCEP/Menu.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿ <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="appCEP.Menu">
@@ -11,11 +11,13 @@
                    Grid.ColumnSpan="2"
                    Text="Api Busca Cep"/>
 
-            <Button Grid.Row="1" Grid.Column="0" Text=""/>
-            <Button Grid.Row="1" Grid.Column="1" Text=""/>
+            <Button Grid.Row="1" Grid.Column="0" Text="Buscar Cep"  Clicked="Button_Clicked"/>
 
-            <Button Grid.Row="2" Grid.Column="0" Text=""/>
-            <Button Grid.Row="2" Grid.Column="1" Text=""/>
+            <Button Grid.Row="1" Grid.Column="1" Text="Buscar Cidades" />
+
+            <Button Grid.Row="2" Grid.Column="0" Text="Buscar ruas de Bairro" />
+            
+            <Button Grid.Row="2" Grid.Column="1" Text="" />
         </Grid>
     </ContentPage.Content>
 </ContentPage>
